# psupbin

./: README.md  pyproject.toml  setup.py
main/: bin.py  psb.py  xor.py
